--- a/src/components/chatBox/index.less
+++ b/src/components/chatBox/index.less
@@ -1,8 +1,12 @@
 .chat-box {
   .chat-header {
+    display: flex;
     height: 60px;
     padding: 10px;
-    border-bottom: solid 1px #eee;
+
+    .chat-info {
+      margin-left: 10px;
+    }
   }
 
   .message-list {
