--- a/src/components/chatBox/index.less
+++ b/src/components/chatBox/index.less
@@ -2,7 +2,7 @@
   .chat-header {
     display: flex;
     height: 60px;
-    padding: 10px;
+    padding: 10px 20px;
 
     .chat-info {
       margin-left: 10px;
@@ -12,7 +12,7 @@
   .message-list {
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 10px 20px;
 
     >li {
       margin-bottom: 10px;
