--- a/src/components/chatList/index.less
+++ b/src/components/chatList/index.less
@@ -6,9 +6,10 @@
     display: flex;
     padding: 10px;
     height: 60px;
+    transition: background 0.2s;
 
     &:hover {
-      background-color: #eee;
+      background-color: #e5e5e5;
     }
 
     .chat-info {
@@ -16,7 +17,11 @@
     }
   }
 
-  .selected .chat-item {
-    background-color: #ddd;
+  .selected {
+    .chat-item {
+      background-color: #f9f9f9;
+      // background: linear-gradient(to right, #f1f1f1, #f9f9f9);
+      border-bottom: solid 1px #eee;
+    }
   }
 }
