--- a/src/components/chatList/index.less
+++ b/src/components/chatList/index.less
@@ -12,8 +12,28 @@
       background-color: #e5e5e5;
     }
 
+    .avatar {
+      flex-shrink: 0;
+    }
+
     .chat-info {
       margin-left: 10px;
+
+      .name {
+        line-height: 20px;
+      }
+
+      .chat-sub {
+        line-height: 20px;
+        font-size: 12px;
+
+        .unread-dot {
+          padding: 0 5px;
+          border-radius: 10px;
+          background-color: #95de64;
+          color: #fff;
+        }
+      }
     }
   }
 
