--- a/src/components/chatBox/index.less
+++ b/src/components/chatBox/index.less
@@ -1,21 +1,52 @@
 .chat-box {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
   .chat-header {
+    flex-shrink: 0;
     display: flex;
     height: 60px;
     padding: 10px 20px;
 
     .chat-info {
       margin-left: 10px;
+
+      .name {
+        line-height: 20px;
+        vertical-align: top;
+      }
+
+      .hint {
+        color: #aaa;
+        font-size: 12px;
+        line-height: 20px;
+        vertical-align: bottom;
+      }
     }
   }
 
   .message-list {
+    flex: 1;
     display: flex;
     flex-direction: column;
     padding: 10px 20px;
 
-    >li {
-      margin-bottom: 10px;
+    > li {
+      margin-bottom: 20px;
+    }
+  }
+
+  .input {
+    flex-shrink: 0;
+    width: 100%;
+    padding: 20px;
+
+    > textarea {
+      border-top: solid 1px #eee;
+      padding: 0;
+      padding-top: 10px;
     }
   }
 }
