--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -4,7 +4,9 @@
   height: 100vh;
 
   .chat-list-wrapper {
-    width: 200px;
+    width: 30%;
+    max-width: 350px;
+    min-width: 60px;
     background-color: #f1f1f1;
   }
 
