--- a/src/components/chatBox/index.less
+++ b/src/components/chatBox/index.less
@@ -10,9 +10,13 @@
     height: 60px;
     padding: 10px 20px;
 
-    .chat-info {
-      margin-left: 10px;
+    .avatar-list {
+      .avatar {
+        margin-right: 10px;
+      }
+    }
 
+    .chat-info {
       .name {
         line-height: 20px;
         vertical-align: top;
