--- a/src/components/sessionList/index.less
+++ b/src/components/sessionList/index.less
@@ -1,10 +1,12 @@
 .chat-list {
   display: flex;
   flex-direction: column;
+  width: 100%;
 
   .chat-item {
     display: flex;
     padding: 10px;
+    width: 100%;
     height: 60px;
     transition: background 0.2s;
 
@@ -17,17 +19,31 @@
     }
 
     .chat-info {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+      width: 100%;
+      overflow: hidden;
       margin-left: 10px;
+      text-align: bottom;
 
       .name {
         line-height: 20px;
       }
 
       .chat-sub {
+        overflow: hidden;
         line-height: 20px;
         font-size: 12px;
+        color: #aaa;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+
+        .message {
+        }
 
         .unread-dot {
+          margin-right: 5px;
           padding: 0 5px;
           border-radius: 10px;
           background-color: #95de64;
