--- a/src/global.less
+++ b/src/global.less
@@ -3,3 +3,35 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+.ant-collapse {
+  border: 0;
+  background: none;
+
+  .ant-collapse-item {
+    border: none;
+
+    &:first-child .ant-collapse-header {
+      border-top: none;
+      margin-top: 0;
+    }
+
+    .ant-collapse-header {
+      border: 0;
+      border-top: solid 1px #e5e5e5;
+      padding: 8px 0;
+      margin: 0 10px;
+      font-size: 12px;
+      color: #777;
+    }
+
+    .ant-collapse-content {
+      border: 0;
+      background: none;
+
+      .ant-collapse-content-box {
+        padding: 0;
+      }
+    }
+  }
+}
