--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -2,8 +2,12 @@
   display: flex;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 
   .chat-list-wrapper {
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
     width: 30%;
     max-width: 350px;
     min-width: 60px;
@@ -12,6 +16,7 @@
 
   .chat-box-wrapper {
     flex: 1;
+    overflow: hidden;
     background-color: #f9f9f9;
   }
 }
