--- a/src/components/chatList/index.less
+++ b/src/components/chatList/index.less
@@ -28,6 +28,9 @@
       text-align: bottom;
 
       .name {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
         line-height: 20px;
       }
 
