fix: 样式更醒目

--- a/src/components/chatList/index.less
+++ b/src/components/chatList/index.less
@@ -31,13 +31,15 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
-        line-height: 20px;
+        line-height: 14px;
+        font-size: 14px;
       }
 
       .chat-sub {
         overflow: hidden;
         line-height: 20px;
         font-size: 12px;
+        margin-top: 6px;
         color: #aaa;
         white-space: nowrap;
         text-overflow: ellipsis;
