--- a/src/components/chatBox/index.less
+++ b/src/components/chatBox/index.less
@@ -23,14 +23,16 @@
 
       .chat-info {
         .name {
-          line-height: 20px;
+          line-height: 18px;
+          font-size: 18px;
           vertical-align: top;
         }
 
         .hint {
           color: #aaa;
           font-size: 12px;
-          line-height: 20px;
+          line-height: 12px;
+          margin-top: 10px;
           vertical-align: bottom;
         }
       }
