--- a/src/components/chatList/index.less
+++ b/src/components/chatList/index.less
@@ -9,6 +9,11 @@
     width: 100%;
     height: 60px;
     transition: background 0.2s;
+    cursor: pointer;
+
+    &.has-message {
+      background-color: #d6eec6;
+    }
 
     &:hover {
       background-color: #e5e5e5;
@@ -62,7 +67,7 @@
     .chat-item {
       background-color: #f9f9f9;
       // background: linear-gradient(to right, #f1f1f1, #f9f9f9);
-      border-bottom: solid 1px #eee;
+      // border-bottom: solid 1px #eee;
     }
   }
 }
